--- a/UnmuteAI_script.ipynb
+++ b/UnmuteAI_script.ipynb
@@ -265,7 +265,6 @@
     "    #root = stemmer.stem(word)\n",
     "    #return str(TextBlob(root).correct())\n",
     "    return stemmer.stem(word)\n",
-    "\n",
     "# hide '-' from the list of puctuations available in the string.puctuation module\n",
     "def reset_punct():\n",
     "    holder = string.punctuation\n",
@@ -280,7 +279,6 @@
     "    processed_text = [ i for i in processed_text if i.isalpha()]\n",
     "    processed_text = [ get_stemmed_text(i) for i in processed_text if not i in words]\n",
     "    return processed_text\n",
-    "\n",
     "# Deprecated\n",
     "def metascore_to_label_depr(metascore):\n",
     "    if metascore > 74:\n",
@@ -1187,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1195,8 +1193,8 @@
      "output_type": "stream",
      "text": [
       "(6936, 14)\n",
-      "(1735, 14)\n",
       "(6936,)\n",
+      "(1735, 14)\n",
       "(1735,)\n"
      ]
     }
@@ -1212,10 +1210,13 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
     "\n",
     "# Displaying the shape of the features and target section of the dataset\n",
+    "# shape of train set\n",
     "print(X_train.shape)\n",
-    "print(X_test.shape)\n",
     "print(y_train.shape)\n",
-    "print(y_test.shape)"
+    "\n",
+    "# Shape of test set\n",
+    "print(X_test.shape)\n",
+    "print(y_test.shape)\n"
    ]
   },
   {
@@ -1530,7 +1531,7 @@
     "ns_fpr, ns_tpr, _ = roc_curve(y_test, ns_probs)\n",
     "nb_fpr, nb_tpr, _ = roc_curve(y_test, clf_probs)\n",
     "# plot the roc curve for the model\n",
-    "plt.plot(ns_fpr, ns_tpr, linestyle='--', label='Model Skill')\n",
+    "plt.plot(ns_fpr, ns_tpr, linestyle='--', label='No Skill')\n",
     "plt.plot(nb_fpr, nb_tpr, marker='.', label='RandomForest')\n",
     "# axis labels\n",
     "plt.xlabel('False Positive Rate')\n",
@@ -1898,89 +1899,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/30\n",
-      "271/271 [==============================] - 0s 2ms/step - loss: 0.6916 - accuracy: 0.5102\n",
-      "Epoch 2/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6911 - accuracy: 0.5268\n",
-      "Epoch 3/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 4/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 5/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 6/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 7/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 8/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6918 - accuracy: 0.5285\n",
-      "Epoch 9/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6915 - accuracy: 0.5285\n",
-      "Epoch 10/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6918 - accuracy: 0.5285\n",
-      "Epoch 11/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6917 - accuracy: 0.5285\n",
-      "Epoch 12/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 13/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 14/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 15/30\n",
-      "271/271 [==============================] - 0s 2ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 16/30\n",
-      "271/271 [==============================] - 0s 2ms/step - loss: 0.6923 - accuracy: 0.5285\n",
-      "Epoch 17/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 18/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 19/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 20/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6934 - accuracy: 0.5285\n",
-      "Epoch 21/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6917 - accuracy: 0.5285\n",
-      "Epoch 22/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 23/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6915 - accuracy: 0.5285\n",
-      "Epoch 24/30\n",
-      "271/271 [==============================] - 0s 2ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 25/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 26/30\n",
-      "271/271 [==============================] - 0s 2ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 27/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6948 - accuracy: 0.5285\n",
-      "Epoch 28/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 29/30\n",
-      "271/271 [==============================] - 0s 1ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Epoch 30/30\n",
-      "271/271 [==============================] - 0s 2ms/step - loss: 0.6916 - accuracy: 0.5285\n",
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_11\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 200)               20200     \n",
+      "embedding_3 (Embedding)      (None, 200, 8)            640000    \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 200)               40200     \n",
+      "flatten_3 (Flatten)          (None, 1600)              0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 201       \n",
+      "dense_24 (Dense)             (None, 1)                 1601      \n",
       "=================================================================\n",
-      "Total params: 60,601\n",
-      "Trainable params: 60,601\n",
+      "Total params: 641,601\n",
+      "Trainable params: 641,601\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n",
-      "Accuracy: 0.53\n"
+      "Epoch 1/20\n",
+      "271/271 [==============================] - 3s 10ms/step - loss: 0.6819 - accuracy: 0.5699\n",
+      "Epoch 2/20\n",
+      "271/271 [==============================] - 3s 10ms/step - loss: 0.5180 - accuracy: 0.8020\n",
+      "Epoch 3/20\n",
+      "271/271 [==============================] - 3s 10ms/step - loss: 0.3347 - accuracy: 0.8857\n",
+      "Epoch 4/20\n",
+      "271/271 [==============================] - 3s 9ms/step - loss: 0.2496 - accuracy: 0.9181\n",
+      "Epoch 5/20\n",
+      "271/271 [==============================] - 3s 10ms/step - loss: 0.1958 - accuracy: 0.9390\n",
+      "Epoch 6/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.1565 - accuracy: 0.9564\n",
+      "Epoch 7/20\n",
+      "271/271 [==============================] - 3s 9ms/step - loss: 0.1259 - accuracy: 0.9675\n",
+      "Epoch 8/20\n",
+      "271/271 [==============================] - 3s 9ms/step - loss: 0.1015 - accuracy: 0.9765\n",
+      "Epoch 9/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0823 - accuracy: 0.9825\n",
+      "Epoch 10/20\n",
+      "271/271 [==============================] - 3s 10ms/step - loss: 0.0673 - accuracy: 0.9871\n",
+      "Epoch 11/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0553 - accuracy: 0.9903\n",
+      "Epoch 12/20\n",
+      "271/271 [==============================] - 3s 10ms/step - loss: 0.0455 - accuracy: 0.9926\n",
+      "Epoch 13/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0376 - accuracy: 0.9950\n",
+      "Epoch 14/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0314 - accuracy: 0.9962\n",
+      "Epoch 15/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0263 - accuracy: 0.9969\n",
+      "Epoch 16/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0222 - accuracy: 0.9979\n",
+      "Epoch 17/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0187 - accuracy: 0.9982\n",
+      "Epoch 18/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0160 - accuracy: 0.9984\n",
+      "Epoch 19/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0138 - accuracy: 0.9987\n",
+      "Epoch 20/20\n",
+      "271/271 [==============================] - 2s 9ms/step - loss: 0.0120 - accuracy: 0.9988\n",
+      "Model: \"sequential_11\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_3 (Embedding)      (None, 200, 8)            640000    \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 1600)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_24 (Dense)             (None, 1)                 1601      \n",
+      "=================================================================\n",
+      "Total params: 641,601\n",
+      "Trainable params: 641,601\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Accuracy: 99.91\n"
      ]
     }
    ],
@@ -1992,30 +1988,26 @@
     "#one_hot_Y = to_categorical(encoded_dec)\n",
     "\n",
     "y = df['LABEL'].values\n",
-    "# Encoding reviews: 200 word-dimension\n",
-    "sequence_hash_size = 200\n",
+    "# Encoding reviews: 80000 word-dimension\n",
+    "sequence_hash_size = 80000\n",
     "encoded_features = [one_hot(review, sequence_hash_size) for review in df.PROCESSED_REVIEW.values]\n",
     "#print(encoded_features)\n",
     "# using 100 words as the max length (Indicating words with relatively close in meaning) for dense word vector\n",
-    "max_length = 100\n",
+    "max_length = 200\n",
     "padded_reviews = pad_sequences(encoded_features, maxlen=max_length, padding='post')\n",
     "\n",
     "# instantiate the model\n",
-    "\n",
     "model = Sequential()\n",
-    "model.add(Dense(200, activation='relu',input_shape=(max_length,)))\n",
-    "model.add(Dense(200, activation='softmax'))\n",
+    "model.add(Embedding(sequence_hash_size, 8, input_length=max_length))\n",
+    "model.add(Flatten())\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
-    "\n",
-    "\n",
-    "model.compile(loss='binary_crossentropy',\n",
-    "              optimizer='adam',\n",
-    "              metrics=['accuracy'])\n",
+    "# compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "                   \n",
-    "model.fit(padded_reviews, y,epochs=30, batch_size=32, verbose=1)\n",
+    "model.fit(padded_reviews, y,epochs=20, verbose=1)\n",
     "print(model.summary())\n",
     "loss, accuracy = model.evaluate(padded_reviews, y, verbose=0)\n",
-    "print('Accuracy: {:.2f}'.format(accuracy))\n"
+    "print('Accuracy: {:.2f}'.format(accuracy*100))\n"
    ]
   },
   {
